# GLFW_and_GLAD

./: CMakeLists.txt  CMakePresets.json  README.md  main.cpp
include/glad/: glad.h
src/: glad.c
